--- a/sensors/security.yaml
+++ b/sensors/security.yaml
@@ -18,11 +18,11 @@
       friendly_name: 'Living Room Motion Sensor'
 
 #####################################################################
-### Aeotec Door/Window Sensor 6 Front Door status
+### Aeotec Door/Window Sensor 6
 #####################################################################
 - platform: template
   sensors:
-    frontdoorsensor:
+    front_door:
       value_template: >-
         {% set state = states('binary_sensor.front_door_sensor') %}
         {% if state == 'on' %}
@@ -34,14 +34,11 @@
         {% endif %}
       friendly_name: 'Front Door Sensor'
 
-#####################################################################
-### Aeotec Door/Window Sensor 6 Garage Door status
-#####################################################################
 - platform: template
   sensors:
-    garagedoorsensor:
+    garage_entry_door:
       value_template: >-
-        {% set state = states('binary_sensor.garage_door_sensor') %}
+        {% set state = states('binary_sensor.garage_entry_door_sensor') %}
         {% if state == 'on' %}
           Open
         {% elif state == 'off' %}
@@ -49,11 +46,14 @@
         {% else %}
           {{ state }}
         {% endif %}
-      friendly_name: 'Garage Door Sensor'
+      friendly_name: 'Garage Entry Door'
 
+#####################################################################
+### Aeotec Door/Window Sensor
+#####################################################################
 - platform: template
   sensors:
-    denwindowsensor:
+    den_window:
       value_template: >-
         {% set state = states('sensor.den_window_access_control') %}
         {% if state == '22' %}
@@ -63,11 +63,11 @@
         {% else %}
           {{ state }}
         {% endif %}
-      friendly_name: 'Den Window Sensor'
+      friendly_name: 'Den Window'
 
 - platform: template
   sensors:
-    jaydenwindowsensor:
+    jayden_room_window:
       value_template: >-
         {% set state = states('sensor.jayden_room_window_access_control') %}
         {% if state == '22' %}
@@ -77,11 +77,11 @@
         {% else %}
           {{ state }}
         {% endif %}
-      friendly_name: 'Jayden Window Sensor'
+      friendly_name: 'Jayden Room Window'
 
 - platform: template
   sensors:
-    backdoorsensor:
+    back_door:
       value_template: >-
         {% set state = states('sensor.back_door_access_control') %}
         {% if state == '22' %}
@@ -91,11 +91,11 @@
         {% else %}
           {{ state }}
         {% endif %}
-      friendly_name: 'Back Door Sensor'
+      friendly_name: 'Back Door'
 
 - platform: template
   sensors:
-    alliewindowsensor:
+    allie_room_window:
       value_template: >-
         {% set state = states('sensor.allie_room_window_access_control') %}
         {% if state == '22' %}
@@ -105,9 +105,11 @@
         {% else %}
           {{ state }}
         {% endif %}
-      friendly_name: 'Allie Window Sensor'
+      friendly_name: 'Allie Room Window'
 
-
+#####################################################################
+### iPhone
+#####################################################################
 - platform: template
   sensors:
     anthony_location:
@@ -136,6 +138,9 @@
         {% endif %}
       friendly_name: 'Tawny'
 
+#####################################################################
+### Monoprice Door/Window Sensor
+#####################################################################
 - platform: template
   sensors:
     bonus_room_north_window:
@@ -148,7 +153,7 @@
         {% else %}
           {{ state }}
         {% endif %}
-      friendly_name: 'Bonus Room N Window Sensor'
+      friendly_name: 'Bonus Room N Window'
 
 - platform: template
   sensors:
@@ -162,7 +167,7 @@
         {% else %}
           {{ state }}
         {% endif %}
-      friendly_name: 'Bonus Room NE Window Sensor'
+      friendly_name: 'Bonus Room NE Window'
 
 - platform: template
   sensors:
@@ -176,7 +181,7 @@
         {% else %}
           {{ state }}
         {% endif %}
-      friendly_name: 'Bonus Room SE Window Sensor'
+      friendly_name: 'Bonus Room SE Window'
 
 - platform: template
   sensors:
@@ -190,7 +195,7 @@
         {% else %}
           {{ state }}
         {% endif %}
-      friendly_name: 'Laundry Room Window Sensor'
+      friendly_name: 'Laundry Room Window'
 
 - platform: template
   sensors:
@@ -204,7 +209,7 @@
         {% else %}
           {{ state }}
         {% endif %}
-      friendly_name: 'Dining Room N Window Sensor'
+      friendly_name: 'Dining Room N Window'
 
 - platform: template
   sensors:
@@ -218,7 +223,7 @@
         {% else %}
           {{ state }}
         {% endif %}
-      friendly_name: 'Dining Room S Window Sensor'
+      friendly_name: 'Dining Room S Window'
 
 - platform: template
   sensors:
@@ -232,7 +237,7 @@
         {% else %}
           {{ state }}
         {% endif %}
-      friendly_name: 'Living Room E Window Sensor'
+      friendly_name: 'Living Room E Window'
 
 - platform: template
   sensors:
@@ -246,7 +251,7 @@
         {% else %}
           {{ state }}
         {% endif %}
-      friendly_name: 'Living Room SE Window Sensor'
+      friendly_name: 'Living Room SE Window'
 
 - platform: template
   sensors:
@@ -260,7 +265,7 @@
         {% else %}
           {{ state }}
         {% endif %}
-      friendly_name: 'Living Room SW Window Sensor'
+      friendly_name: 'Living Room SW Window'
 
 - platform: template
   sensors:
@@ -274,7 +279,7 @@
         {% else %}
           {{ state }}
         {% endif %}
-      friendly_name: 'Master Bedroom SE Window Sensor'
+      friendly_name: 'Master Bedroom SE Window'
 
 - platform: template
   sensors:
@@ -288,7 +293,7 @@
         {% else %}
           {{ state }}
         {% endif %}
-      friendly_name: 'Master Bedroom SW Window Sensor'
+      friendly_name: 'Master Bedroom SW Window'
 
 - platform: template
   sensors:
@@ -302,13 +307,13 @@
         {% else %}
           {{ state }}
         {% endif %}
-      friendly_name: 'Master Bedroom W Window Sensor'
+      friendly_name: 'Master Bedroom W Window'
 
 - platform: template
   sensors:
-    hallway_window:
+   garage_attic_door:
       value_template: >-
-        {% set state = states('sensor.hallway_window_access_control') %}
+        {% set state = states('sensor.garage_attic_door_access_control') %}
         {% if state == '22' %}
           Open
         {% elif state == '23' %}
@@ -316,7 +321,42 @@
         {% else %}
           {{ state }}
         {% endif %}
-      friendly_name: 'Hallway Window Sensor'
+      friendly_name: 'Garage Attic Door'
+
+- platform: template
+  sensors:
+    master_closet_attic_door:
+      value_template: >-
+        {% set state = states('sensor.master_closet_attic_door_access_control') %}
+        {% if state == '22' %}
+          Open
+        {% elif state == '23' %}
+          Closed
+        {% else %}
+          {{ state }}
+        {% endif %}
+      friendly_name: 'Master Closet Attic Door'
+
+#####################################################################
+### Monoprice Garage Door Tilt Sensor
+#####################################################################
+- platform: template
+  sensors:
+    garage_door:
+      value_template: >-
+        {% set state = states('sensor.garage_door_alarm_level') %}
+        {% if state == '255' %}
+          Open
+        {% elif state == '0' %}
+          Closed
+        {% else %}
+          {{ state }}
+        {% endif %}
+      friendly_name: 'Garage Door'
+
+
+
+
 
 
 
